agregado 1er ejecicio con elemento bloque

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <section id="seccion">
-      <span class="franjasDobles"><strong>Laboratoria</strong></span>
-      <span class="franjaUnica"><strong>es</strong></span>
-      <span class="franjasDobles"><strong>TRANSFORMACIÓN</strong></span>
+      <p class="franjasDobles"><strong>Laboratoria</strong></p>
+      <p class="franjaUnica"><strong>es</strong></p>
+      <p class="franjasDobles"><strong>TRANSFORMACIÓN</strong></p>
     </section>
   </body>
 </html>
