agregado 3er ejercicio con elemento bloque

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <section id="seccion">
-      <p class="franjasDobles"><strong>Laboratoria</strong></p>
+      <p class="franjasDobles" id="laboratoria"><strong>Laboratoria</strong></p>
       <p class="franjaUnica"><strong>es</strong></p>
-      <p class="franjasDobles"><strong>TRANSFORMACIÓN</strong></p>
+      <p class="franjasDobles" id="transformacion"><strong>TRANSFORMACIÓN</strong></p>
     </section>
   </body>
 </html>
