agregado 5to ejercicio con elemento bloque

--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
       <p class="franjaUnica"><strong>es</strong></p>
       <p class="franjasDobles" id="transformacion"><strong>TRANSFORMACIÓN</strong></p>
     </section>
+    <section>
+      <div></div>
+      <div class="cuadradoPadre">
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
+      <div></div>
+      <div></div>
+      <div id="solito"></div>
+    </section>
   </body>
 </html>
